--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 unit_19/19.2_exercise/venv/
 unit_19/19.1_exercise/venv/
+unit_19/19.3_exercise/venv
+unit_19/19.2_exercise/__pycache__/
+unit_19/19.1_exercise/__pycache__/
+unit_19/19.1_exercise/__pycache__/
