--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 unit_19/19.1_exercise/venv/
 unit_19/19.2_exercise/venv/
-unit_19/19.3_exercise/venv
+unit_19/19.3_exercise/venv/
 unit_19/19.1_exercise/__pycache__/
 unit_19/19.2_exercise/__pycache__/
 unit_19/19.3_exercise/__pycache__/
+unit_19/19.5_boggle_exercise/venv/
+unit_19/19.5_boggle_exercise/__pycache__/
