--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ unit_19/19.2_exercise/__pycache__/
 unit_19/19.3_exercise/__pycache__/
 unit_19/19.5_boggle_exercise/venv/
 unit_19/19.5_boggle_exercise/__pycache__/
+unit_20/__pycache__
+unit_20/venv
