Added sqlalchemy project part 1 aka blogly

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ unit_19/19.5_boggle_exercise/venv/
 unit_19/19.5_boggle_exercise/__pycache__/
 unit_20/__pycache__
 unit_20/venv
+unit_23/__pycache__
+unit_23/venv
